# Calibre-Metadata-Extractor-Plugin

./: CONTRIBUTING.md  KI_WRITE_TEST.md  LICENSE  LICENSE-HEADER.txt  LICENSE_INFO.md  PATENTS.md  README.md  pyproject.toml
calibre_metadata_extractor/: __init__.py  extractor.py
